libs/tree-sitter-wing/test/corpus/statements/try.txt
====================
Try/Catch
====================

try {
} catch e {
} finally {
}

---

(source
    (try_catch_statement
        block: (block)
        exception_identifier: (identifier)
        catch_block: (block)
        finally_block: (block)
    )
)
